# OSPD-Fall-25

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  config.yaml  conversations.db  coverage.xml  design.md  example_service_client.py  fly.toml  mkdocs.yml  pyproject.toml  regenerate_client.py
docs/: component.md  index.md
docs/api/: mail_client_service.md
gemini_ai_service_client/: __init__.py
gemini_ai_service_client/api/default/: clear_conversation_history_user_id_delete.py  get_auth_url_auth_login_get.py  get_conversation_history_history_user_id_get.py  handle_auth_callback_auth_callback_post.py  health_check_health_get.py  read_root_get.py  revoke_auth_auth_user_id_delete.py  send_message_chat_post.py
gemini_ai_service_client/models/: __init__.py  auth_callback_request.py  auth_callback_response.py  auth_url_response.py  clear_conversation_response.py  conversation_history_response.py  health_check_health_get_response_health_check_health_get.py  http_validation_error.py  message.py  read_root_get_response_read_root_get.py  revoke_auth_auth_user_id_delete_response_revoke_auth_auth_user_id_delete.py  send_message_request.py  send_message_response.py  validation_error.py
src/: app.py  test_app.py
src/gemini_adapter/: client.py  pyproject.toml
src/gemini_adapter/src/gemini_adapter/: __init__.py  _impl.py
src/gemini_adapter/tests/: test_adapter.py
src/gemini_api/: pyproject.toml
src/gemini_api/src/gemini_api/: __init__.py  client.py
src/gemini_api/tests/: test_client.py
src/gemini_impl/: pyproject.toml
src/gemini_impl/src/gemini_impl/: __init__.py  client.py  oauth.py
src/gemini_impl/tests/: test_client.py  test_oauth.py
src/gemini_service/: README.md  pyproject.toml
src/gemini_service/src/gemini_service/: __init__.py  api.py  main.py
src/gemini_service/tests/: test_api_endpoints.py  test_integration.py
src/gemini_service_api_client/: README.md  pyproject.toml
src/gemini_service_api_client/gemini_ai_service_client/api/default/: clear_conversation_history_user_id_delete.py  get_auth_url_auth_login_get.py  get_conversation_history_history_user_id_get.py  handle_auth_callback_auth_callback_post.py  read_root_get.py  revoke_auth_auth_user_id_delete.py  send_message_chat_post.py
src/gemini_service_api_client/gemini_ai_service_client/models/: __init__.py  auth_callback_request.py  auth_callback_response.py  auth_url_response.py  clear_conversation_response.py  conversation_history_response.py  message.py  read_root_get_response_read_root_get.py  revoke_auth_auth_user_id_delete_response_revoke_auth_auth_user_id_delete.py  send_message_request.py  send_message_response.py
src/mail_client_adapter/: README.md  pyproject.toml
src/mail_client_adapter/src/mail_client_adapter/: __init__.py  _impl.py
src/mail_client_adapter/tests/: test_adapter.py
src/mail_client_api/src/mail_client_api/: __init__.py
src/mail_client_service/: README.md  __init__.py  api.py  main.py  openapi_schema.json  pyproject.toml  test.py
src/mail_client_service/src/mail_client_service/: __init__.py  _impl.py  api.py  main.py
src/mail_client_service/tests/: test_api_endpoints.py  test_service_client.py
src/mail_client_service_client/: README.md  pyproject.toml
src/mail_client_service_client/src/mail_client_service_client/: __init__.py
src/mail_client_service_client/src/mail_client_service_client/mail_client_service_api_client/api/default/: delete_message_messages_message_id_delete.py  get_message_messages_message_id_get.py  get_messages_messages_get.py  mark_as_read_messages_message_id_read_put.py
src/mail_client_service_client/src/mail_client_service_client/mail_client_service_api_client/models/: delete_response.py  mark_read_response.py  message_response.py
src/mail_client_service_client/tests/: test_service_client.py
test-results/circleci/: junit.xml
tests/e2e/: test_gemini_e2e.py  test_main_application.py  test_service_e2e.py
tests/integration/: test_client_integration.py  test_gemini_integration.py  test_service_integration.py
