[project]
name = "gemini-adapter"
version = "0.1.0"
description = "Adapter connecting abstract Gemini API to FastAPI service"
requires-python = ">=3.11"
dependencies = [
    "gemini-api",
    "gemini-service-api-client",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gemini_adapter"]

[tool.uv.sources]
gemini-api = { workspace = true }
gemini-service-api-client = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py311"
extend = "../../pyproject.toml"

[tool.ruff.lint]
ignore = []

[tool.mypy]
strict = true
explicit_package_bases = true
