[project]
name = "gemini-impl"
version = "0.1.0"
description = "Google Gemini implementation of AI chat service"
requires-python = ">=3.11"
dependencies = [
    "gemini-api",
    "google-generativeai>=0.3.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gemini_impl"]

[tool.uv.sources]
gemini-api = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py311"
extend = "../../pyproject.toml"

[tool.ruff.lint]
ignore = []

[tool.mypy]
strict = true
explicit_package_bases = true
