[project]
name = "gemini-service"
version = "0.1.0"
description = "FastAPI service exposing Gemini AI chat functionality over HTTP"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "gemini-api",
    "gemini-impl",
    "pydantic>=2.0.0",
]

[tool.uv.sources]
gemini-api = { workspace = true }
gemini-impl = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gemini_service"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "B",
    "I",
    "N",
    "UP",
    "ANN",
    "S",
    "A",
    "C4",
    "DTZ",
    "EM",
    "ISC",
    "ICN",
    "G",
    "PIE",
    "T20",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SIM",
    "TID",
    "TCH",
    "ARG",
    "PTH",
    "ERA",
    "PD",
    "PGH",
    "PL",
    "TRY",
    "FLY",
    "NPY",
    "PERF",
    "RUF",
]
ignore = [
    "S101",
    "ANN101",
    "ANN102",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",
    "ANN001",
    "ANN201",
    "ARG001",
    "ARG002",
    "PLR2004",
    "TRY300",
    "BLE001",
]
"src/gemini_service/api.py" = [
    "BLE001",
    "TRY300",
    "ARG001",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

