[project]
name = "mail-client-adapter"
version = "0.1.0"
description = "HTTP service adapter implementing mail_client_api.Client protocol"
requires-python = ">=3.11"
dependencies = [
    "mail-client-api",
    "mail-client-service-client",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mail_client_adapter"]

[tool.uv.sources]
mail-client-api = { workspace = true }
mail-client-service-client = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py311"
extend = "../../pyproject.toml"

[tool.ruff.lint]
ignore = []

[tool.mypy]
strict = true
explicit_package_bases = true
