[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mail_client_service"
version = "0.1.0"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
]

[tool.setuptools]
py-modules = ["api", "main"]

[tool.uv.sources]
mail-client-api = { workspace = true }