[project]
name = "mail-client-service"
version = "0.1.0"
description = "FastAPI service exposing mail client functionality over HTTP"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic>=2.0.0",
    "mail-client-api",
    "gmail-client-impl",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx",
    "respx>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mail_client_service"]

[tool.uv.sources]
mail-client-api = { workspace = true }
gmail-client-impl = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py311"
extend = "../../pyproject.toml"

[tool.ruff.lint]
ignore = []

[tool.mypy]
strict = true
explicit_package_bases = true
